update view admin

--- a/src/resources/views/admin/account/index.ejs
+++ b/src/resources/views/admin/account/index.ejs
@@ -1,6 +1,6 @@
 <main class="admin__main">
     <div class="admin__main-heading">
-        <p> My accout </p>
+        <p>Tài khoản của tôi</p>
         <div>
             <button type="button" class="admin__main-btn admin__main-edit btn-changePass">
                 <i class='bx bxs-key'></i>
