--- a/src/resources/views/admin/dashboard/index.ejs
+++ b/src/resources/views/admin/dashboard/index.ejs
@@ -1,6 +1,6 @@
 <main class="admin__main admin__main--scroll">
     <div class="admin__main-heading">
-        <p>Dashboard</p>
+        <p>Thống kê</p>
     </div>
     <div class="admin__dashboard">
         <div class="admin__dashboard-item">
