--- a/src/resources/views/admin/employee/details.ejs
+++ b/src/resources/views/admin/employee/details.ejs
@@ -1,6 +1,6 @@
 <main class="admin__main">
     <div class="admin__main-heading">
-        <p> <span onclick="back()" style="cursor: pointer; text-decoration: underline;">Employee</span> / Details / <%= employee.lastname%> <%= employee.firstname%></p>
+        <p> <span onclick="back()" style="cursor: pointer; text-decoration: underline;">Nhân viên</span> / Chi tiết / <%= employee.lastname%> <%= employee.firstname%></p>
         <a href="" class="admin__main-btn admin__main-create btn-back">
             <i class='bx bx-undo'></i>
         </a>
