--- a/src/resources/views/admin/employee/index.ejs
+++ b/src/resources/views/admin/employee/index.ejs
@@ -1,6 +1,6 @@
 <main class="admin__main admin__main--scroll">
     <div class="admin__main-heading">
-        <p>Employees</p>
+        <p>Nhân viên</p>
         <div>
             <a href="" class="admin__main-btn admin__main-delete btn-check-apply" style="display: none;">
                 <i class='bx bx-trash'></i>
@@ -21,9 +21,9 @@
                             </div>
                         </th>
                         <th>ID</th>
-                        <th>Name</th>
-                        <th>Phone Number</th>
-                        <th>Role</th>
+                        <th>Họ tên</th>
+                        <th>Số điện thoại</th>
+                        <th>Quyền</th>
                         <th></th>
                     </tr>
                 </thead>
