--- a/src/resources/views/admin/partials/header.ejs
+++ b/src/resources/views/admin/partials/header.ejs
@@ -25,25 +25,25 @@
                 <li class="admin__header-item">
                     <a href="/administration/myaccount" class="admin__header-link">
                         <i class='bx bx-user'></i>
-                        My account
+                        Tài khoản
                     </a>
                 </li>
                 <li class="admin__header-item">
                     <a href="" class="admin__header-link mode-btn">
                         <i class='bx bx-sun'></i>
-                        Screen mode
+                        Màn hình
                     </a>
                 </li>
                 <li class="admin__header-item">
                     <a href="/" class="admin__header-link">
                         <i class='bx bx-book-content' ></i>
-                        Clinic
+                        Phòng khám
                     </a>
                 </li>
                 <li class="admin__header-item">
                     <a href="/administration/myaccount/logout" class="admin__header-link">
                         <i class='bx bx-log-out' ></i>
-                        Log out
+                        Đăng xuất
                     </a>
                 </li>
             </ul>
