--- a/src/resources/views/admin/partials/sidebar.ejs
+++ b/src/resources/views/admin/partials/sidebar.ejs
@@ -8,19 +8,19 @@
         <li>
             <a href="/administration" class="admin__link <%if (_currentURL == '/administration') { %> active <% } %>">
                 <i class='bx bx-grid-alt'></i>
-                <span>Dashboard</span>
+                <span>Thống kê</span>
             </a>
         </li>
         <li>
             <a href="/administration/employee" class="admin__link <%if (_currentURL.includes('employee')) { %> active <% } %>">
                 <i class='bx bx-face'></i>
-                <span>Employee</span>
+                <span>Nhân viên</span>
             </a>
         </li>
         <li>
             <a href="/administration/patient" class="admin__link <%if (_currentURL.includes('patient')) { %> active <% } %>">
                 <i class='bx bxs-face' ></i>
-                <span>Patient</span>
+                <span>Khách hàng</span>
             </a>
         </li>
     </ul>
