--- a/src/resources/views/admin/patient/details.ejs
+++ b/src/resources/views/admin/patient/details.ejs
@@ -1,6 +1,6 @@
 <main class="admin__main">
     <div class="admin__main-heading">
-        <p> <span onclick="back()" style="cursor: pointer; text-decoration: underline;">Patients</span> / Details / <%= patient.fullname%></p>
+        <p> <span onclick="back()" style="cursor: pointer; text-decoration: underline;">Khách hàng</span> / Chi tiết / <%= patient.fullname%></p>
         <a href="" class="admin__main-btn admin__main-create btn-back">
             <i class='bx bx-undo'></i>
         </a>
